updating linkedin link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="linkedin.com/in/rogeraleite" target="_blank" class="home__social-icon">
+                            <a href="https://linkedin.com/in/rogeraleite" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
     
