--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
                         <div class="home__social">
                             <a href="https://linkedin.com/in/rogeraleite" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
-                            </a>
-    
+                            </a>    
                             <a href="https://github.com/rogeraleite" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>                            
+                            </a>
+                            <a href="https://www.instagram.com/drrogerleite/" target="_blank" class="home__social-icon">
+                                <i class="uil  uil-instagram"></i>
                             </a>
                         </div>
     
@@ -603,9 +605,15 @@
                     </ul-->
 
 
-                    <div class="footer__socials">                        
+                    <div class="footer__socials"> 
+                        <a href="https://linkedin.com/in/rogeraleite" target="_blank" class="footer__social">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>                         
                         <a href="https://github.com/rogeraleite" target="_blank" class="footer__social">
                             <i class="uil  uil-github"></i>
+                        </a>
+                        <a href="https://www.instagram.com/drrogerleite/" target="_blank" class="footer__social">
+                            <i class="uil  uil-instagram"></i>
                         </a>
                     </div>
                 </div>
