--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Roger A. Leite</title>
+        <title>Roger Leite</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
