--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I am Roger Leite</h1>
                             <h3 class="home__subtitle">Lead UX Designer and Researcher, Ph.D.</h3>
-                            <p class="home__description">High level experience in data solution and knowledge development.</p>
+                            <p class="home__description">
+                                Welcome to my professional space! My journey in UX/UI design has been marked by handling <b>complex AI-driven and data-intensive projects across various industries</b>, including financial fraud, healthcare, sports, and testing software.
+                                <br><br>
+                                My diverse experience includes collaborating with industry leaders such as SAP and Erste Bank, innovative projects in <b>B2B SaaS</b> environments, and dynamic work with <b>B2C startups</b>. I'm also an accomplished author of <b>17 Design/Data Science papers</b> and a dedicated mentor for future tech professionals.
+                                <br><br>
+                                I'm eager to discuss how my expertise in <b>design, research, AI, and team management</b> can contribute to your projects.</p>
                             <a href="#contact" class="button button--flex">
                                 See "CV & Contact" <i class="uil button__icon"></i>
                             </a>
@@ -219,7 +224,10 @@
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portfolio">
                 <h2 class="section__title">Portfolio</h2>
-                <span class="section__subtitle" href="https://scholar.google.com/citations?hl=en&user=Pmr3clYAAAAJ" target="_blank">Most recent work</span>
+                <span class="section__subtitle" href="https://scholar.google.com/citations?hl=en&user=Pmr3clYAAAAJ" target="_blank">
+                    I have selected a variety of projects, with a special emphasis on <b>B2B and SaaS</b> initiatives.
+                    <br>
+                    To explore more of my public works, please also visit my <b>Google Scholar profile</b>.</span>
                 
                 <div class="portfolio__container container swiper-container">
                     <div class="swiper-wrapper">
@@ -495,16 +503,16 @@
 
 
                     <div class="footer__socials"> 
-                        <a href="https://linkedin.com/in/rogeraleite" target="_blank" class="footer__social">
+                        <a href="https://linkedin.com/in/rogeraleite" target="_blank" class="footer__social" title="View LinkedIn Profile">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>                         
-                        <a href="https://github.com/rogeraleite" target="_blank" class="footer__social">
+                        <a href="https://github.com/rogeraleite" target="_blank" class="footer__social" title="View GitHub Profile">
                             <i class="uil  uil-github"></i>
                         </a>
-                        <a href="https://www.instagram.com/drrogerleite/" target="_blank" class="footer__social">
+                        <!-- <a href="https://www.instagram.com/drrogerleite/" target="_blank" class="footer__social">
                             <i class="uil  uil-instagram"></i>
-                        </a>
-                        <a href="https://scholar.google.com/citations?hl=en&user=Pmr3clYAAAAJ" target="_blank" class="footer__social">
+                        </a> -->
+                        <a href="https://scholar.google.com/citations?hl=en&user=Pmr3clYAAAAJ" target="_blank" class="footer__social" title="View Google Scholar Profile">
                             <i class="uil  uil-google"></i>
                         </a> 
                     </div>
