--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <!--==================== MAIN ====================-->
         <main class="main">
-            section>
+
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
                 <div class="home__container container grid">
@@ -172,9 +172,9 @@
                             <br>
                             <span class="skills__subtitle">Tricentis</span>
                         </div>
-                        <img src="assets/img/DataLakeReport.png" alt="" class="portfolio__img">
+                        <img src="assets/img/portfolio/DataLakeReport.png" alt="" class="portfolio__img">
                         <br>
-                        <a href="link-to-your-portfolio-item" class="card__open-btn" target="_blank">
+                        <a href="assets/html_pages/uta_portfolio.html" class="card__open-btn" target="_blank">
                             Open in a new tab
                         </a>
                         
@@ -186,22 +186,22 @@
                             <br>
                             <span class="skills__subtitle">Independent Project powered by OpenAI API</span>
                         </div>
-                        <img src="assets/img/MedZap.png" alt="" class="portfolio__img">
+                        <img src="assets/img/portfolio/MedZap.png" alt="" class="portfolio__img">
                         <br>
-                        <a href="link-to-your-portfolio-item" class="card__open-btn" target="_blank">
+                        <a href="assets/html_pages/medzap_portfolio.html" class="card__open-btn" target="_blank">
                             Open in a new tab
                         </a>
                     </div>
                     <div class="card grid__item">
                         <div>
-                            <h1 class="skills__title">Soccer Analysis - Case Study</h1>
-                            <span class="skills__subtitle">Web App - Internal - B2B</span>
+                            <h1 class="skills__title">Testim</h1>
+                            <span class="skills__subtitle">Web App - SaaS - B2B</span>
                             <br>
-                            <span class="skills__subtitle">Developed in collaboration with SAP (2014)</span>
+                            <span class="skills__subtitle">Tricentis</span>
                         </div>
-                        <img src="assets/img/Soccer.png" alt="" class="portfolio__img">
+                        <img src="assets/img/portfolio/Soccer.png" alt="" class="portfolio__img">
                         <br>
-                        <a href="link-to-your-portfolio-item" class="card__open-btn" target="_blank">
+                        <a href="assets/html_pages/testim_portfolio.html" class="card__open-btn" target="_blank">
                             Open in a new tab
                         </a>
                     </div>
@@ -212,9 +212,9 @@
                             <br>
                             <span class="skills__subtitle">Erste Bank</span>
                         </div>
-                        <img src="assets/img/EVAandNEVA.png" alt="" class="portfolio__img">
+                        <img src="assets/img/portfolio/EVAandNEVA.png" alt="" class="portfolio__img">
                         <br>
-                        <a href="link-to-your-portfolio-item" class="card__open-btn" target="_blank">
+                        <a href="assets/html_pages/evaneva_portfolio.html" class="card__open-btn" target="_blank">
                             Open in a new tab
                         </a>
                     </div>
