fixing cosmetic issues

--- a/assets/html_pages/evaneva_portfolio.html
+++ b/assets/html_pages/evaneva_portfolio.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="../../assets/css/styles.css">
 
-        <title>EVA and NEVA</title>
+        <title>Roger: EVA and NEVA</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
