--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
                     <div class="card grid__item">
                         <div>
-                            <h1 class="skills__title">Data Lake Report</h1>
+                            <h1 class="skills__title">Data Lake Reports</h1>
                             <span class="skills__subtitle">🖥️ Web App - SaaS - B2B</span>
                             <br>
                             <span class="skills__subtitle">Tricentis (2021)</span>
