--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                     <span class="qualification__line"></span>
                                 </div>
                                 <div>
-                                    <h3 class="qualification__title">Product Owner | Requirement Engineer</h3>
+                                    <h3 class="qualification__title">Product Owner | Requirements Engineer</h3>
                                     <span class="qualification__subtitle">Dedalus (B2B Healthcare IT industry) - Vienna, Austria</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
